Add on premise doc (#49)
* feat/add docs

* fix/fix review

* fix NEXTAUTH_URL

* env variable memo

---------

Co-authored-by: Clément Sirieix <clementsirieix@Clements-MacBook-Pro.local>
Co-authored-by: Clément Sirieix <clementsirieix@clements-mbp.home>
Co-authored-by: Willy Douhard <willy.douhard@gmail.com>

--- a/concepts/get-started/deployment.mdx
+++ b/concepts/get-started/deployment.mdx
@@ -2,7 +2,7 @@
 title: Deployment
 ---
 
-<Note>Coming soon! Contact us here for enterprise support https://forms.gle/uyKyZmmpVET95Wbx8 </Note>
+After you've successfully set up and tested your Chainlit application locally, the next step is to make it accessible to a wider audience by deploying it to a hosting service. This guide provides various options for self-hosting your Chainlit app, along with critical information you should be aware of before deploying.
 
 ## Self-host
 
