--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -142,6 +142,13 @@ OKTA_ISSUER="the issuer"
 ENABLE_VERCEL_ANALYTICS=true
 ```
 
+## Configuring storage
+
+In order to be able to use the storage solution of your choice, you will need to configure CORS for it.
+
+- For [AWS S3](https://repost.aws/knowledge-center/s3-configure-cors)
+- For [Google Cloud Storage](https://saturncloud.io/blog/how-to-set-up-cors-on-google-cloud-storage/)
+
 ## Configure your Chainlit app
 
 Once you successfully deployed Chainlit Cloud, don't forget to set the following environment variables in your chainlit App.
