--- a/concepts/configuration/UI.mdx
+++ b/concepts/configuration/UI.mdx
@@ -19,18 +19,25 @@ Chainlit UI can be customized by updating your `config.toml`.
 </ParamField>
 
 <ParamField path="default_collapse_content" type="bool" default={true}>
-  When handling large text content we collapse it for keeping the threads concise.
-  You can disable manually disable this behavior.
+  When handling large text content we collapse it for keeping the threads
+  concise. You can disable manually disable this behavior.
 </ParamField>
 
 <ParamField path="default_expand_message" type="bool" default={false}>
-  Sub-messages are hiden by default, you can "expand" the parent message to show those messages.
-  Toggling this setting will display the sub-messages by default.
+  Sub-messages are hiden by default, you can "expand" the parent message to show
+  those messages. Toggling this setting will display the sub-messages by
+  default.
 </ParamField>
 
 <ParamField path="github" type="str" optional>
-  Passing this option will display a Github-shaped link.
-  If not passed we will display the link to Chainlit repo.
+  Passing this option will display a Github-shaped link. If not passed we will
+  display the link to Chainlit repo.
+</ParamField>
+
+<ParamField path="base_url" type="str" optional>
+  If the app is served behind a reverse proxy (like cloud run) we need to know
+  the base url of the application for oauth. Example value:
+  `https://mydomain.com`.
 </ParamField>
 
 ### Default configuration
