--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -3,8 +3,7 @@ title: Deployment
 ---
 
 <Note>
-  Contact us here for enterprise support
-  https://forms.gle/uyKyZmmpVET95Wbx8
+  Contact us here for enterprise support https://forms.gle/uyKyZmmpVET95Wbx8
 </Note>
 
 ## Get the image
@@ -148,6 +147,15 @@ In order to be able to use the storage solution of your choice, you will need to
 
 - For [AWS S3](https://repost.aws/knowledge-center/s3-configure-cors)
 - For [Google Cloud Storage](https://saturncloud.io/blog/how-to-set-up-cors-on-google-cloud-storage/)
+
+## Configure OAuth providers
+
+If you enabled OAuth authentication in the environment variables, don't forget to allow the callback url for each of the provider. The callback url is in the form:
+
+```shell
+<protocol>://<domain>/api/auth/callback/<provider>
+# Example https://cloud.chainlit.io/api/auth/callback/google
+```
 
 ## Configure your Chainlit app
 
