--- a/api-reference/action.mdx
+++ b/api-reference/action.mdx
@@ -25,6 +25,10 @@ The `Action` class is designed to create and manage actions to be sent and displ
   the action.
 </ParamField>
 
+<ParamField path="collapsed" type="bool" optional>
+  Show the action in a drawer menu
+</ParamField>
+
 ### Usage
 
 ```python Code Example
