--- a/api-reference/cache.mdx
+++ b/api-reference/cache.mdx
@@ -2,7 +2,7 @@
 title: "cache"
 ---
 
-The `cache` decorator is a tool for caching results of resource-intensive calculations or loading processes. It can be conveniently combined with the [file watcher](/concepts/command-line) to prevent resource reloading each time the application restarts. This not only saves time, but also enhances overall efficiency.
+The `cache` decorator is a tool for caching results of resource-intensive calculations or loading processes. It can be conveniently combined with the [file watcher](/backend/command-line) to prevent resource reloading each time the application restarts. This not only saves time, but also enhances overall efficiency.
 
 ### Parameters
 
