--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -25,7 +25,7 @@ The callback can be sync or async, the annotation can handle either.
 
 ## Get the current authenticated user
 
-You can access the current authenticated user through the [user_session](/concepts/user-session).
+You can access the current authenticated user through the [user_session](/backend/user-session).
 
 ```py
 @cl.on_chat_start
