--- a/cloud/persistence/getting-started.mdx
+++ b/cloud/persistence/getting-started.mdx
@@ -2,7 +2,7 @@
 title: Getting Started
 ---
 
-Chainlit Cloud offers a swift and efficient solution for setting up data storage.
+Learn how to use Chainlit Cloud to set up data persistence in your Chainlit app.
 
 ## Create a Chainlit Project
 
