--- a/guides/migration/0.6.0.mdx
+++ b/guides/migration/0.6.0.mdx
@@ -98,7 +98,7 @@ async def main(message: str):
 
 </CodeGroup>
 
-This example can be applied to any framework. Simply create a per-user instance in [on_chat_start](/api-reference/on-chat-start), store it in the [user_session](/concepts/user-session), and retrieve it in [on_message](/api-reference/on-message) to process the message.
+This example can be applied to any framework. Simply create a per-user instance in [on_chat_start](/api-reference/on-chat-start), store it in the [user_session](/backed/user-session), and retrieve it in [on_message](/api-reference/on-message) to process the message.
 
 <Note>
   You'll need to manually pass the correct callback when executing your chain or
