--- a/integrations/langchain.mdx
+++ b/integrations/langchain.mdx
@@ -128,6 +128,6 @@ The `-w` flag tells Chainlit to enable auto-reloading, so you don't need to rest
 
 ## Next Steps
 
-Congratulations! You've just created your first LLM app with Chainlit and LangChain. From here, you can add [elements](/concepts/elements) and [actions](/concepts/actions) to create a more sophisticated app.
+Congratulations! You've just created your first LLM app with Chainlit and LangChain. From here, you can add [elements](/chat-experience/elements) and [actions](/chat-experience/actions) to create a more sophisticated app.
 
 Happy coding! 🎉
