--- a/integrations/langflow.mdx
+++ b/integrations/langflow.mdx
@@ -98,6 +98,6 @@ The `-w` flag enables auto-reloading so that you don't have to restart the serve
 
 ## Next Steps
 
-Congratulations! You've just created your first LLM app with Chainlit and LangFlow. From here, you can add [elements](/concepts/elements) and [actions](/concepts/actions) to create a more sophisticated app.
+Congratulations! You've just created your first LLM app with Chainlit and LangFlow. From here, you can add [elements](/chat-experience/elements) and [actions](/chat-experience/actions) to create a more sophisticated app.
 
 Happy coding! 🎉
