--- a/api-reference/cloud-client/getting-started.mdx
+++ b/api-reference/cloud-client/getting-started.mdx
@@ -6,20 +6,10 @@ For enhanced flexibility in data persistence, consider using the Cloud Client di
 
 Before using the Cloud package, make sure to activate [Cloud Mode](/cloud/persistence/getting-started#activating-chainlit-cloud-mode) for your Chainlit Application.
 
-By default the Chainlit client uses the project API key provided to the application:
-
-```python Code Example
-from chainlit.client.cloud import chainlit_client
-
-created_user = await chainlit_client.create_app_user(app_user)
-```
-
-Alternatively you can initialize your own client with a project API key:
+Initialize the client with your project API key:
 
 ```python Code Example
 from chainlit.client.cloud import ChainlitCloudClient
 
 chainlit_client = ChainlitCloudClient(api_key="your_api_key_here")
 ```
-
-
