--- a/chat-data/feedback.mdx
+++ b/chat-data/feedback.mdx
@@ -17,7 +17,7 @@ It allows your users to provide direct feedback on the interaction, which can be
 
 ## How-to
 
-To use human feedback, you first need to enable [data persistence](/cloud/persistence).
+To use human feedback, you first need to enable [data persistence](/cloud/persistence/getting-started).
 
 Once data persistence is enabled, each message sent by your application will be accompanied by thumbs up and thumbs down icons. Users can click these icons to provide feedback on the interaction.
 
