--- a/chat-data/history.mdx
+++ b/chat-data/history.mdx
@@ -8,7 +8,7 @@ Chat history allow users to search and browse their past conversations.
 
 To enable chat history, you need to enable:
 
-- [data persistence](/cloud/persistence)
+- [data persistence](/cloud/persistence/getting-started)
 - [authentication](/authentication)
 
 <Frame caption="Chat History">
