--- a/chat-data/overview.mdx
+++ b/chat-data/overview.mdx
@@ -4,7 +4,10 @@ title: Overview
 
 By default, your Chainlit app does not retain the chats and elements it generates. However, the ability to store and utilize this data can be a crucial part of your project or organization.
 
-<Note>Learn how to enable data persistence [here](/cloud/persistence).</Note>
+<Note>
+  Learn how to enable data persistence
+  [here](/cloud/persistence/getting-started).
+</Note>
 
 Once enabled, data persistence will introduce new features to your application.
 
