--- a/guides/migration/0.7.0.mdx
+++ b/guides/migration/0.7.0.mdx
@@ -36,11 +36,10 @@ Previously Chainlit was allowing for different database mode (`cloud`, `local` a
 The new system is much simpler. You can create an API key on [Chainlit Cloud](https://cloud.chainlit.io/). Then set it in your `.env` and you are good to go.
 
 We understand that data privacy is a concern for companies, that's why we made **Chainlit Cloud self hostable**.
-<Note>
-  Contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.
-</Note>
 
-Check the [documentation](/cloud/persistence) to learn more about it.
+<Note>Contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.</Note>
+
+Check the [documentation](/cloud/persistence/getting-started) to learn more about it.
 
 ## Chainlit Cloud
 
