--- a/api-reference/cloud-client/MessageDict.mdx
+++ b/api-reference/cloud-client/MessageDict.mdx
@@ -25,7 +25,10 @@ The `MessageDict` represents a Chainlit App conversation message.
   The [prompt](/api-reference/prompt) value passed to a message.
 </ParamField>
 <ParamField path="language" type="Optional[str]">
-  Language of the code if the content is code. See https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock—supported-languages for a list of supported languages.</ParamField>
+  Language of the code if the content is code. See
+  https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock—supported-languages
+  for a list of supported languages.
+</ParamField>
 <ParamField path="parentId" type="Optional[str]">
   The parent message ID, if available.
 </ParamField>
