--- a/observability-iteration/prompt-playground/overview.mdx
+++ b/observability-iteration/prompt-playground/overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 ---
 
 <Frame caption="Prompt Playground sneak peek">
-  <video controls autoplay loop src="/images/pp-overview.mp4" />
+  <video controls autoPlay loop src="/images/pp-overview.mp4" />
 </Frame>
 
 The Prompt Playground is a unique feature that allows developers to visualize, iterate, and version prompts, thereby enhancing the development/debugging process.
