--- a/api-reference/on-file-upload.mdx
+++ b/api-reference/on-file-upload.mdx
@@ -5,7 +5,7 @@ title: "on_file_upload"
 Hook to react to user file upload events.
 
 <Frame caption="File upload">
-  <video controls autoplay loop src="/images/on-file-upload.mp4" />
+  <video controls autoPlay loop src="/images/on-file-upload.mp4" />
 </Frame>
 
 ### Usage
