--- a/chat-data/overview.mdx
+++ b/chat-data/overview.mdx
@@ -14,7 +14,7 @@ Once enabled, data persistence will introduce new features to your application.
 <CardGroup cols={2}>
   <Card
     title="Chat History"
-    icon="bolt"
+    icon="clock-rotate-left"
     color="#ea5a0c"
     href="/chat-data/history"
   >
