--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -2,12 +2,12 @@
 title: "Overview"
 ---
 
-Chainlit is an open-source Python package that makes it incredibly fast to build and share LLM apps. Integrate the Chainlit API in your existing code to spawn a ChatGPT-like interface in minutes!
+Chainlit is an open-source Python package that makes it incredibly fast to build Chat GPT like applications with your own business logic and data.
 
 <Frame caption="Build LLM apps with Chainlit">
   <video
     controls
-    autoplay
+    autoPlay
     loop
     src="https://github.com/Chainlit/chainlit/assets/13104895/e347e52c-35b2-4c35-8a88-f8ac02dd198e"
   />
@@ -15,9 +15,9 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 
 ## Key features
 
-1. [Build LLM Apps fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
+1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-2. [Collect user feedback:](/chat-data/feedback) Invite your teammates, create annotated datasets and run experiments together
+2. [Data persistence:](/chat-data/overview) Leverage user generated data + feedback.
 
 3. [Visualize multi-steps reasoning:](/observability-iteration/chain-of-thought) Understand the intermediary steps that produced an output at a glance
 
