feat/update docs with Sentry

--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -139,6 +139,14 @@ OKTA_ISSUER="the issuer"
 
 # If you want to use Vercel Analytics (only for hosting with Vercel)
 ENABLE_VERCEL_ANALYTICS=true
+
+# If you want to monitor your application using Sentry
+SENTRY_ORG="org"
+SENTRY_PROJECT="project"
+# https://docs.sentry.io/product/sentry-basics/concepts/dsn-explainer/
+NEXT_PUBLIC_SENTRY_DSN="sentry-dsn"
+# https://docs.sentry.io/product/accounts/auth-tokens/
+SENTRY_AUTH_TOKEN="sentry-auth-token"
 ```
 
 ## Configuring storage
