--- a/api-reference/set-chat-profiles.mdx
+++ b/api-reference/set-chat-profiles.mdx
@@ -6,6 +6,8 @@ Decorator to define the list of chat profiles.
 
 If authentication is enabled, you can access the user details to create the list of chat profiles conditionally.
 
+The icon is optional.
+
 ### Parameters
 
 <ParamField path="current_user" type="AppUser">
