--- a/chat-experience/chat-profiles.mdx
+++ b/chat-experience/chat-profiles.mdx
@@ -2,7 +2,7 @@
 title: "Chat Profiles"
 ---
 
-Chat Profiles are a way to present several agent configurations to users before they start a conversation.
+Chat Profiles are a way to let users select one of your agent configurations.
 
 Your users are presented with the list of configurations. Hovering over an option displays the markdown description.
 
