--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -15,6 +15,10 @@ This callback enables you for example to restrict the OAuth login to specific em
 
 Follow these guides to create an OAuth app for your chosen provider(s). Then copy the information into the right environment variable to active the provider.
 
+<Note>
+  The below environment variables can set using .env file that should exist in the root of your project which Chainlit will automatically load.
+</Note>
+
 <Warning>
   If your app is served behind a reverse proxy (like cloud run) you will have to
   set the `CHAINLIT_URL` environment variable. For instance, if you host your
