--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -16,7 +16,7 @@ This callback enables you for example to restrict the OAuth login to specific em
 Follow these guides to create an OAuth app for your chosen provider(s). Then copy the information into the right environment variable to active the provider.
 
 <Note>
-  The below environment variables can set using .env file that should exist in the root of your project which Chainlit will automatically load.
+  The below environment variables can set using .env file that should exist in the root of your project which Chainlit will automatically load.[Add Environment file for Chainlit](https://docs.chainlit.io/backend/env-variables).
 </Note>
 
 <Warning>
