--- a/ui-customisation/custom-css.mdx
+++ b/ui-customisation/custom-css.mdx
@@ -8,7 +8,7 @@ Chainlit Application allows for design customization through the use of a custom
 [UI]
 # ...
 # This can either be a css file in your `public` dir or a URL
-custom_css = 'public/stylesheet.css'
+custom_css = '/public/stylesheet.css'
 ```
 
 <Note>
