--- a/get-started/deployment.mdx
+++ b/get-started/deployment.mdx
@@ -12,7 +12,8 @@ After you've successfully set up and tested your Chainlit application locally, t
   `example.com/my-app`.
 </Warning>
 
-- on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
+- on [Azure Container](https://techcommunity.microsoft.com/t5/fasttrack-for-azure/create-an-azure-openai-langchain-chromadb-and-chainlit-chat-app/ba-p/3885602)
 - on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
 - on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
 - on [Replit](https://replit.com/@DanConstantini/Build-a-Chatbot-with-OpenAI-LangChain-and-Chainlit?v=1)
+- on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
