--- a/get-started/deployment.mdx
+++ b/get-started/deployment.mdx
@@ -16,4 +16,5 @@ After you've successfully set up and tested your Chainlit application locally, t
 - on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
 - on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
 - on [Replit](https://replit.com/@DanConstantini/Build-a-Chatbot-with-OpenAI-LangChain-and-Chainlit?v=1)
+- on [Render](https://discord.com/channels/1088038867602526210/1126834266504966294/1126845898287230977)
 - on [Fly.io](https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja)
