--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -165,6 +165,11 @@ If you enabled OAuth authentication in the environment variables, don't forget t
 # Example https://cloud.chainlit.io/api/auth/callback/google
 ```
 
+## Configure the port and start the container
+
+The server within the docker image will run on port `3000`. Don't forget to expose it.
+You should now be ready to start the container.
+
 ## Configure your Chainlit app
 
 Once you successfully deployed Chainlit Cloud, don't forget to set the following environment variables in your chainlit App.
