update docs for on-message breaking change

--- a/api-reference/cache.mdx
+++ b/api-reference/cache.mdx
@@ -30,7 +30,7 @@ def to_cache():
 value = to_cache()
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     await cl.Message(
         content=value,
     ).send()
