--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -51,11 +51,11 @@ def start():
 
 
 @cl.on_message
-async def main(message):
+async def main(message: cl.Message):
     agent = cl.user_session.get("agent")  # type: AgentExecutor
     cb = cl.LangchainCallbackHandler(stream_final_answer=True)
 
-    await cl.make_async(agent.run)(message, callbacks=[cb])
+    await cl.make_async(agent.run)(message.content, callbacks=[cb])
 ```
 
 ## Try it out
