--- a/get-started/pure-python.mdx
+++ b/get-started/pure-python.mdx
@@ -26,12 +26,12 @@ import chainlit as cl
 
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     # Your custom logic goes here...
 
     # Send a response back to the user
     await cl.Message(
-        content=f"Received: {message}",
+        content=f"Received: {message.content}",
     ).send()
 ```
 
