--- a/api-reference/author-rename.mdx
+++ b/api-reference/author-rename.mdx
@@ -30,10 +30,10 @@ def rename(orig_author: str):
 
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     llm = OpenAI(temperature=0)
     llm_math = LLMMathChain.from_llm(llm=llm)
-    res = await llm_math.acall(message, callbacks=[cl.AsyncLangchainCallbackHandler()])
+    res = await llm_math.acall(message.content, callbacks=[cl.AsyncLangchainCallbackHandler()])
 
     await cl.Message(content="Hello").send()
 ```
