--- a/api-reference/integrations/langchain.mdx
+++ b/api-reference/integrations/langchain.mdx
@@ -18,8 +18,8 @@ llm = OpenAI(temperature=0)
 llm_math = LLMMathChain.from_llm(llm=llm)
 
 @cl.on_message
-async def main(message: str):
-    res = await llm_math.acall(message, callbacks=[cl.AsyncLangchainCallbackHandler()])
+async def main(message: cl.Message):
+    res = await llm_math.acall(message.content, callbacks=[cl.AsyncLangchainCallbackHandler()])
 
     await cl.Message(content="Hello").send()
 ```
@@ -35,9 +35,9 @@ llm = OpenAI(temperature=0)
 llm_math = LLMMathChain.from_llm(llm=llm)
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
 
-    res = await cl.make_async(llm_math)(message, callbacks=[cl.LangchainCallbackHandler()])
+    res = await cl.make_async(llm_math)(message.content, callbacks=[cl.LangchainCallbackHandler()])
 
     await cl.Message(content="Hello").send()
 ```
