--- a/api-reference/integrations/langflow.mdx
+++ b/api-reference/integrations/langflow.mdx
@@ -37,13 +37,13 @@ async def start():
 
 
 @cl.on_message
-async def main(message):
+async def main(message: cl.Message):
     # Load the flow from the user session
     flow = cl.user_session.get("flow")  # type: AgentExecutor
 
     # Run the flow
     res = await cl.make_async(flow.run)(
-        message, callbacks=[cl.LangchainCallbackHandler()]
+        message.content, callbacks=[cl.LangchainCallbackHandler()]
     )
 
     # Send the response
@@ -64,13 +64,13 @@ async def start():
 
 
 @cl.on_message
-async def main(message):
+async def main(message: cl.Message):
     # Load the flow from the user session
     flow = cl.user_session.get("flow")  # type: AgentExecutor
 
     # Run the flow
     res = await cl.make_async(flow.run)(
-        message, callbacks=[cl.LangchainCallbackHandler()]
+        message.content, callbacks=[cl.LangchainCallbackHandler()]
     )
 
     # Send the response
