--- a/api-reference/message.mdx
+++ b/api-reference/message.mdx
@@ -44,9 +44,9 @@ import chainlit as cl
 
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     await cl.Message(
-        content=f"Received: {message}",
+        content=f"Received: {message.content}",
     ).send()
 ```
 
