--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -58,7 +58,7 @@ Then, we send back the answer to the UI with the [Message](/api-reference/messag
 
 ```python app.py
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     # Create the prompt object for the Prompt Playground
     prompt = Prompt(
         provider=ChatOpenAI.id,
@@ -66,11 +66,11 @@ async def main(message: str):
             PromptMessage(
                 role="user",
                 template=template,
-                formatted=template.format(input=message)
+                formatted=template.format(input=message.content)
             )
         ],
         settings=settings,
-        inputs={"input": message},
+        inputs={"input": message.content},
     )
 
     # Prepare the message for streaming
