--- a/guides/sync-async.mdx
+++ b/guides/sync-async.mdx
@@ -33,12 +33,12 @@ For example, to create an async function that responds to messages in Chainlit:
 import chainlit as cl
 
 @cl.on_message
-async def main(message: str):
+async def main(message: cl.Message):
     # Your custom logic goes here
 
     # Send a response back to the user
     await cl.Message(
-        content=f"Received: {message}",
+        content=f"Received: {message.content}",
     ).send()
 ```
 
