--- a/chat-data/security.mdx
+++ b/chat-data/security.mdx
@@ -15,42 +15,17 @@ And here is the anonymized version:
 
 ## Analyze and anonymize data
 
-Integrate [Microsoft Presidio](https://microsoft.github.io/presidio/) for robust data sanitization in your Chainlit application. Find example code in the [Chainlit Cookbook](https://github.com/Chainlit/cookbook/blob/main/agent-playground-langchain/app.py).
+Integrate [Microsoft Presidio](https://microsoft.github.io/presidio/) for robust data sanitization in your Chainlit application. 
 
 ```python Code Example
-import os
-from chainlit.playground.config import add_llm_provider
-from chainlit.playground.providers.langchain import LangchainGenericProvider
-from langchain.llms import HuggingFaceHub
-from langchain import PromptTemplate, LLMChain
 import chainlit as cl
-
-llm = HuggingFaceHub(
-    model_kwargs={"max_length": 500},
-    repo_id="google/flan-t5-xxl",
-    huggingfacehub_api_token=os.environ["HUGGINGFACEHUB_API_TOKEN"],
-)
-
-add_llm_provider(
-    LangchainGenericProvider(
-        id=llm._llm_type,
-        name="HuggingFaceHub",
-        llm=llm,
-        is_chat=False
-    )
-)
-
-template = """Question: {question}
-
-Answer:"""
-prompt = PromptTemplate(template=template, input_variables=["question"])
-llm_chain = LLMChain(prompt=prompt, llm=llm)
 
 @cl.on_message
 async def main(message: str):
     # Notice that the message is passed as is
-    response = await llm_chain.arun(message, callbacks=[cl.AsyncLangchainCallbackHandler()])
-
+    response = await cl.Message(
+        content=f"Received: {message}",
+    ).send()
 ```
 
 Before proceeding, ensure that the Python packages required for PII analysis and anonymization are installed. Run the following commands in your terminal to install them:
@@ -91,10 +66,9 @@ async def check_text(text: str):
 async def main(message: str):
   with check_text(message):
     # This block is only executed when the user press "Continue"
-    response = await llm_chain.arun(
-      message, 
-      callbacks=[cl.AsyncLangchainCallbackHandler()]
-    )
+    response = await cl.Message(
+        content=f"Received: {message}",
+    ).send()
 ```
 
 
@@ -133,7 +107,7 @@ async def check_text(text: str):
 async def main(message: str):
   with check_text(message) as anonymized_message:
     response = await llm_chain.arun(
-      anonymized_message, 
+      anonymized_message 
       callbacks=[cl.AsyncLangchainCallbackHandler()]
     )
 ```
