feat/support single tenant azure app

--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -131,6 +131,7 @@ GITHUB_SECRET="your secret"
 ## https://support.smartbear.com/readyapi/docs/requests/auth/types/oauth2/tutorial-azure.html
 AZURE_AD_CLIENT_ID="your id"
 AZURE_AD_CLIENT_SECRET="your secret"
+AZURE_AD_TENANT_ID"your tenant id"
 ## Okta
 ## https://developer.okta.com/docs/guides/implement-oauth-for-okta/main/
 OKTA_CLIENT_ID="your id"
