move chat profile above chat settings

--- a/chat-experience/chat-profiles.mdx
+++ b/chat-experience/chat-profiles.mdx
@@ -6,9 +6,12 @@ Chat Profiles are a way to let users select one of your agent configurations.
 
 Your users are presented with the list of configurations. Hovering over an option displays the markdown description.
 
-<Card title="Chat Profiles API" icon="bolt" href="/api-reference/set-chat-profiles">
+<Card
+  title="Chat Profiles API"
+  icon="comments"
+  href="/api-reference/set-chat-profiles"
+>
   Learn how to define chat profiles.
 </Card>
 
 ![Chat Profiles](/images/chat-profiles.png)
-
