update chat profiles with auth example

--- a/api-reference/set-chat-profiles.mdx
+++ b/api-reference/set-chat-profiles.mdx
@@ -14,7 +14,6 @@ The icon is optional.
   The message coming from the UI.
 </ParamField>
 
-
 ### Usage
 
 ```python Simple code example
@@ -52,14 +51,14 @@ import chainlit as cl
 
 @cl.set_chat_profiles
 async def chat_profile(current_user: cl.AppUser):
-    if current_user.role != "ADMIN":
+    if "admin_user" not in current_user.tags:
         # Default to 3.5 when not admin
         return [
-          cl.ChatProfile(
-              name="GPT-3.5",
-              markdown_description="The underlying LLM model is **GPT-3.5**.",
-              icon="https://picsum.photos/200",
-          )
+            cl.ChatProfile(
+                name="GPT-3.5",
+                markdown_description="The underlying LLM model is **GPT-3.5**.",
+                icon="https://picsum.photos/200",
+            )
         ]
 
     return [
@@ -79,11 +78,16 @@ async def chat_profile(current_user: cl.AppUser):
 @cl.password_auth_callback
 def auth_callback(username: str, password: str) -> Optional[cl.AppUser]:
     if (username, password) == ("admin", "admin"):
-        return cl.AppUser(username="admin", role="ADMIN", provider="credentials")
+        return cl.AppUser(
+            username="admin", role="ADMIN", provider="credentials", tags=["admin_user"]
+        )
     elif (username, password) == ("test", "test"):
-        return cl.AppUser(username="test", role="USER", provider="credentials")
+        return cl.AppUser(
+            username="test", role="USER", provider="credentials", tags=["regular_user"]
+        )
     else:
         return None
+
 
 
 @cl.on_chat_start
