update docker image version

--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -20,7 +20,7 @@ docker login --username chainlit
 3. Pull the image
 
 ```shell
-docker pull chainlit/chainlit-cloud:latest
+docker pull chainlit/chainlit-cloud:0.2.7
 ```
 
 ## Host the image
