--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -44,8 +44,8 @@ async def main():
   res = await cl.AskActionMessage(
     content="Pick an action!",
     actions=[
-      Action(name="continue", value="continue", label="✅ Continue"),
-      Action(name="cancel", value="cancel", label="❌ Cancel")
+      cl.Action(name="continue", value="continue", label="✅ Continue"),
+      cl.Action(name="cancel", value="cancel", label="❌ Cancel")
     ]
   ).send()
 
