add privacy paragraph

--- a/cloud/persistence/getting-started.mdx
+++ b/cloud/persistence/getting-started.mdx
@@ -38,3 +38,9 @@ To enable chat history in your Chainlit app, you must setup data persistence AND
 ## Deactivation
 
 If you wish to deactivate data persistence, simply comment out or remove the `CHAINLIT_API_KEY` environment variable.
+
+## Data privacy & security
+
+We prioritize your data's privacy and security. We understand how crucial the data fed into Chainlit Cloud is for your business and handle it with utmost care. 
+
+Contact us for detailed information: contact@chainlit.io
