update intro video

--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -4,12 +4,12 @@ title: "Overview"
 
 Chainlit is an open-source Python package that makes it incredibly fast to build Chat GPT like applications with your own business logic and data.
 
-<Frame caption="Build LLM apps with Chainlit">
+<Frame caption="Build Chat GPT like apps with Chainlit">
   <video
     controls
     autoPlay
     loop
-    src="https://github.com/Chainlit/chainlit/assets/13104895/e347e52c-35b2-4c35-8a88-f8ac02dd198e"
+    src="https://github.com/Chainlit/chainlit/assets/13104895/cbcb8078-ab4d-4e4c-8e4e-7aaa51ca1fd0"
   />
 </Frame>
 
