--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -9,6 +9,7 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
     controls
     autoPlay
     loop
+    muted
     src="https://github.com/Chainlit/chainlit/assets/13104895/cbcb8078-ab4d-4e4c-8e4e-7aaa51ca1fd0"
   />
 </Frame>
