add aws deployment guide

--- a/get-started/deployment.mdx
+++ b/get-started/deployment.mdx
@@ -12,6 +12,7 @@ After you've successfully set up and tested your Chainlit application locally, t
   `example.com/my-app`.
 </Warning>
 
+- on [AWS](https://ankushgarg.super.site/how-to-deploy-your-chatgpt-like-app-with-chainlit-and-aws-ecs)
 - on [Azure Container](https://techcommunity.microsoft.com/t5/fasttrack-for-azure/create-an-azure-openai-langchain-chromadb-and-chainlit-chat-app/ba-p/3885602)
 - on [Google Cloud Run](https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f)
 - on [Google App Engine](https://github.com/amjadraza/langchain-chainlit-docker-deployment-template)
