move pii example

--- a/examples/security.mdx
+++ b/examples/security.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Security"
+title: "Security - PII"
 ---
 
 When building chat applications, it's crucial to ensure the secure handling of sensitive data, especially Personal Identifiable Information (PII). PII can be directly or indirectly linked to an individual, making it essential to protect user privacy by preventing the transmission of such data to language models.
 
-## Example of PII
+### Example of PII
 
 Consider the text below, where PII has been highlighted:
 
